[package]
edition = "2021"
name = "engine"
version = "0.1.0"

[dependencies]
bevy = {version = "0.6.1"}
bevy_ggrs = "0.9"
bevy_prototype_lyon = "0.4"
bytemuck = "1.8.0"
derive_more = "0.99.17"
fixed = {version = "1.13", features = ["serde"]}
ggrs = "0.9"
log = "0.4.14"
rapier2d = {version = "0.11.1", features = ["serde-serialize", "enhanced-determinism"]}
serde = "1.0.130"
structopt = "0.3"

[[bin]]
name = "engine"
path = "src/main.rs"
